# python-project-template

./: .gitignore  README.md  pyproject.toml  tox.ini
python_project_template/: hello.py
tests/: test_hello.py
